Correct size image on IE

--- a/src/assets/scss/pages/login.scss
+++ b/src/assets/scss/pages/login.scss
@@ -61,6 +61,8 @@
 	}
 
 	.login_image {
+		height: 100%;
+		width: 100%;
 		img {
 			height: 300px;
 			max-height: 300px;
@@ -118,6 +120,7 @@
 		}
 
 		.login_image {
+			min-height: 600px;
 			img {
 				height: 600px;
 				max-height: none;
